Fix error when saving stats mode.
General tidy up of optimiser code.